<resources>
    <string name="app_name">찾아유</string>
    <string name="login_description">유기동물 관심의 시작,</string>
    <string name="login_app_name">찾아유</string>
    <string name="login_email">이메일 주소</string>
    <string name="login_password">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="login_signup">회원가입</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_social">또는</string>
    <string name="login_title_first">작은 관심이</string>
    <string name="login_title_second">누군가의 세상이 됩니다.</string>
    <string name="login_description_text">유기동물 관련 어플리케이션</string>
    <string name="login_without_signup">가입없이 시작하기</string>
    <string name="login_without_signup_toast_message">찾아유에 오신 것을 환영합니다!</string>
    <string name="signup_email_title">이메일</string>
    <string name="signup_email_hint">example1234@gmail.com</string>
    <string name="signup_email_button">중복 확인</string>
    <string name="signup_email_button_right">사용 가능한 이메일 주소에요.</string>
    <string name="signup_email_button_wrong">이미 가입된 이메일 주소에요.</string>
    <string name="signup_email_invalid">올바른 이메일 주소를 작성해주세요.</string>
    <string name="signup_password_title">비밀번호</string>
    <string name="signup_password">사용할 비밀번호</string>
    <string name="signup_password_hint">8~20자리, 영문자, 숫자, 특수문자 포함</string>
    <string name="signup_password_right">좋은 비밀번호예요!</string>
    <string name="signup_password_wrong">조건에 맞지않는 비밀번호예요</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_password_check_wrong">비밀번호가 일치하지 않아요:(</string>
    <string name="signup_password_check_right">비밀번호가 완벽히 일치하네요:)</string>
    <string name="signup_nickname_title">당신의 이름을 알려주세요!</string>
    <string name="signup_nickname_hint">닉네임을 입력해주세요(최대 8글자)</string>
    <string name="signup_button">다음</string>
    <string name="signup_failed">회원가입에 실패했어요:( 다시 시도해보세요!</string>
    <string name="signup_success_title">%s님,\n가입을 환영합니다!</string>
    <string name="signup_success_description">유기동물에 관심을 가져주셔서 감사해요!</string>
    <string name="signup_success_button">찾아유 시작하기</string>
    <string name="slash">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="Maltese">말티즈</string>
    <string name="dummy_location_address">서울특별시 광진구 화양동 000–0</string>
    <string name="asterisk">*</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_search">조회</string>
    <string name="bottom_nav_report">신고</string>
    <string name="bottom_nav_info">정보</string>
    <string name="bottom_nav_my">마이</string>
    <string name="search_main_title">조회하기</string>
    <string name="search_name_welshcorgi">웰시코기</string>
    <string name="search_disappear_title">실종신고</string>
    <string name="search_detail_found_date">발견 날짜</string>
    <string name="search_detail_found_date_value">2024.11.04</string>
    <string name="search_detail_gender">성별</string>
    <string name="search_detail_gender_value">암컷</string>
    <string name="search_see_more">더보기</string>
    <string name="search_detail_detail_info">상세정보</string>
    <string name="search_detail_breed">품종</string>
    <string name="search_detail_breed_value">[개]웰시코기</string>
    <string name="search_detail_hair_color">털색</string>
    <string name="search_detail_hair_color_value">갈색, 흰색</string>
    <string name="search_detail_reporter_info">신고자 정보</string>
    <string name="search_detail_reporter_info_value">닉네임</string>
    <string name="search_detail_report_date">신고 날짜</string>
    <string name="search_detail_report_date_value">2024–11–05</string>
    <string name="search_detail_found_location">발견 장소</string>
    <string name="search_detail_found_location_value">마산합포구 진북면 금산리 192 수로</string>
    <string name="search_detail_see_location">위치 보기</string>
    <string name="search_detail_feature_chip1">새끼 강아지에요</string>
    <string name="search_detail_feature_chip2">털이 복슬복슬해요</string>
    <string name="search_detail_feature_chip3">겁이 많아요</string>
    <string name="search_detail_detailed_description">사람과 컨택하는 거는 무서워 하는 것 같지만, 무작정 도망치지 않고, 사람을 거리 두고 쳐다봄.\n\n또한 목에 빨간 목줄이 있고, 3~5세 정도 나이로 보임.\n\n오른쪽 앞다리에 얇은 상처가 있고, 피가 살짝 묻어있음.</string>
    <string name="search_witness_title">목격신고</string>
    <string name="search_detail_see_disappear_location">실종 장소 보기</string>
    <string name="search_detail_see_found_location">발견 장소 보기</string>
    <string name="search_detail_witness_info">목격자 정보</string>
    <string name="search_detail_witness_info_value">닉네임</string>
    <string name="search_detail_write_date">작성 날짜</string>
    <string name="search_detail_write_date_value">2024–11–05</string>
    <string name="search_detail_see_shelter_location">보호소 위치 보기</string>
    <string name="search_detail_age">나이</string>
    <string name="search_detail_age_value">1살</string>
    <string name="search_detail_weight">몸무게</string>
    <string name="search_detail_weight_value">2kg</string>
    <string name="search_detail_post_date">게시 날짜</string>
    <string name="search_detail_post_date_value">2024–11–23</string>
    <string name="search_detail_neuter">중성화</string>
    <string name="search_detail_neuter_value">Y</string>
    <string name="search_detail_special_note">특이사항</string>
    <string name="search_detail_see">보기</string>
    <string name="search_detail_special_note_value">멀티푸주청 갑옷을 입고 있어서 미용함. 귀병 조금 있음(치료중). 브라백토투여. 사람 엄청 좋아하는 아이\n\n</string>
    <string name="search_detail_noti_num">공고 번호</string>
    <string name="search_detail_noti_num_value">경남–창원1–2024–00545</string>
    <string name="search_detail_noti_date">공고 날짜</string>
    <string name="search_detail_noti_date_value">2024.11.23 ~ 2024.12.03</string>
    <string name="search_detail_rescue_location">구조 장소</string>
    <string name="search_detail_rescue_location_value">성산구 내동</string>
    <string name="search_detail_shelter">보호 센터</string>
    <string name="search_detail_shelter_value">태민동물병원</string>
    <string name="search_detail_shelter_phone_num">전화번호</string>
    <string name="search_detail_shelter_phone_num_value">010–2868–2108</string>
    <string name="search_detail_jurisdiction">관할 기관</string>
    <string name="search_detail_jurisdiction_value">경상북도 청도군</string>
    <string name="search_filter_date">날짜</string>
    <string name="search_filter_date_input_start">시작 날짜 선택</string>
    <string name="search_filter_date_input_end">종료 날짜 선택</string>
    <string name="search_filter_date_input">날짜 선택</string>
    <string name="search_filter_type">축종</string>
    <string name="search_filter_breed">품종</string>
    <string name="search_filter_location">위치</string>
    <string name="search_filter_location_city">시/도 선택</string>
    <string name="search_filter_location_gu">시/구/군 선택</string>
    <string name="search_filter_breed_hint">품종을 선택하거나 입력해주세요.</string>
    <string name="search_species_dog">강아지</string>
    <string name="search_species_cat">고양이</string>
    <string name="search_species_etc">기타</string>
    <string name="search_filter_check">확인</string>
    <string name="date_single">%d.%d.%d ~</string>
    <string name="date_range">%1$d.%2$d.%3$d ~ %4$d.%5$d.%6$d</string>
    <string name="report_dialog_finished">신고가 완료되었어요!</string>
    <string name="report_dialog_missing_mention">당신의 가족을 저희가 열심히 찾아드릴게요!</string>
    <string name="report_dialog_witness_mention">당신의 관심이 오늘도 한 생명을 지켜냈어요 :)</string>
    <string name="report_dialog_see_history">나의 신고내역 보기</string>
    <string name="report_dialog_go_home">홈 화면으로 가기</string>
    <string name="report_dialog_good_image">이런 사진이면 좋아요</string>
    <string name="report_dialog_ai_tip">얼굴이 드러나 있는 사진은 AI 판별이 쉬워요!</string>
    <string name="report_dialog_capture">사진 촬영</string>
    <string name="report_dialog_upload">사진 업로드</string>
    <string name="report_dialog_report">신고</string>
    <string name="report_dialog_call_report">전화로 신고 하기</string>
    <string name="report_dialog_witness_report">목격 신고글 작성</string>
    <string name="report_dialog_missing_report">실종 신고글 작성</string>
    <string name="report_dialog_set_location">현 위치로 설정하기</string>
    <string name="report_dialog_default_location_address">서울특별시 광진구 화양동 000–0ddd 광진구 건국대학교 000–00 202호</string>
    <string name="report_dialog_find_location">지도에서 위치 찾기</string>
    <string name="permission_dialog_title">접근 권한이 없어 해당 기능을 사용할 수 없습니다.</string>
    <string name="permission_dialog_body">권한을 허용하시려면 설정을 눌러주세요.\n필요 권한: 카메라</string>
    <string name="report_witness">목격신고</string>
    <string name="report_missing">실종신고</string>
    <string name="report_title">신고하기</string>
    <string name="report_upload_image_title">사진을 등록해주세요!</string>
    <string name="report_upload_image_subtitle">사진은 최대 5장까지 등록할 수 있어요.</string>
    <string name="report_goto_info_button">선택하기  ></string>
    <string name="report_species">축종</string>
    <string name="report_species_placeholder">축종을 선택해주세요.</string>
    <string name="report_species_introduction">어떤 동물인가요?</string>
    <string name="report_breed">품종</string>
    <string name="report_breed_placeholder">품종을 선택해주세요.</string>
    <string name="report_breed_input_placeholder">품종을 입력하거나 선택해주세요.</string>
    <string name="report_breed_introduction">어떤 품종인가요?</string>
    <string name="report_age">나이</string>
    <string name="report_age_postfix">살</string>
    <string name="report_age_placeholder">__ 살</string>
    <string name="report_age_unit">%d 살</string>
    <string name="report_age_introduction">나이를 선택해주세요.</string>
    <string name="report_animal_info_title">정보입력</string>
    <string name="report_species_title">어떤 동물인가요?</string>
    <string name="report_species_dog">강아지</string>
    <string name="report_species_cat">고양이</string>
    <string name="report_species_extra">기타</string>
    <string name="report_breed_title">어떤 품종인가요?</string>
    <string name="report_breed_input_hint">품종을 선택해주세요.</string>
    <string name="report_gender_title">성별을 선택해주세요</string>
    <string name="report_rfid_title">RFID 번호를 입력해주세요.</string>
    <string name="report_rfid_placeholder">아이의 RFID를 알고 계시다면 입력해주세요.</string>
    <string name="report_color_title">아이의 털색을 선택해 주세요.</string>
    <string name="report_color_title_additional">(여러 개 선택 가능)</string>
    <string name="report_witness_date_title">목격 날짜를 확인해주세요.</string>
    <string name="report_missing_date_title">실종 날짜를 확인해주세요.</string>
    <string name="report_date_placeholder">날짜를 선택해주세요.</string>
    <string name="report_feature_title">특징을 체크해주세요!</string>
    <string name="report_description_title">추가 설명 작성하기</string>
    <string name="report_description_title_additional">(옵션)</string>
    <string name="report_description_placeholder">특이사항이 있다면 작성해주세요.</string>
    <string name="report_location">주소를 입력해주세요</string>
    <string name="report_location_title">위치가 맞는지 확인해주세요!</string>
    <string name="report_missing_near_location_title">실종 지점 주변 장소를 입력해주세요.</string>
    <string name="report_missing_near_location_placeholder">실종된 아이를 찾는데 도움이 돼요!</string>
    <string name="report_image_count">%d</string>
    <string name="report_cannot_distinction">품종을 인식하지 못했습니다.</string>
    <string name="black_color">검정색</string>
    <string name="yellow_color">노란색</string>
    <string name="spotted_color">점박이</string>
    <string name="white_color">하얀색</string>
    <string name="brown_color">갈색</string>
    <string name="striped_color">줄무늬</string>
    <string name="gray_color">회색</string>
    <string name="red_color">적색</string>
    <string name="home_top_bar_logo">홈 탑바 로고</string>
    <string name="home_top_bar_profile">홈 탑바 프로필</string>
    <string name="home_today_bar_rescue">어제 구조된 동물</string>
    <string name="home_today_bar_rescue_num">%d</string>
    <string name="home_today_bar_report">어제 신고된 동물</string>
    <string name="home_today_bar_report_num">%d</string>
</resources>