<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="110dp"
    android:layout_height="109dp">

    <!-- TODO stroke 색상 설정-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_report_default_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bg_report_item_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small" />

    <ImageView
        android:id="@+id/iv_report_default_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:src="@drawable/icon_report_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_report_default_image"
        app:layout_constraintStart_toStartOf="@id/iv_report_default_image"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@id/iv_report_default_camera"
        app:layout_constraintStart_toStartOf="@id/iv_report_default_camera"
        app:layout_constraintTop_toBottomOf="@id/iv_report_default_camera">

        <TextView
            android:id="@+id/tv_report_default_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textAppearance="@style/TextAppearance.FindU.caption_12"
            android:textColor="@color/gray5" />

        <TextView
            android:id="@+id/tv_report_default_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textAppearance="@style/TextAppearance.FindU.caption_12"
            android:textColor="@color/gray5" />

        <TextView
            android:id="@+id/tv_report_default_max_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textAppearance="@style/TextAppearance.FindU.caption_12"
            android:textColor="@color/gray5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>