<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@null"
            android:src="@drawable/img_findu_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/login_description"
            android:textAppearance="@style/TextAppearance.FindU.Head3_SB_18"
            android:textColor="@color/gray5"
            app:layout_constraintBottom_toTopOf="@id/tv_login_app_name"
            app:layout_constraintStart_toEndOf="@id/iv_login_logo" />

        <TextView
            android:id="@+id/tv_login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_app_name"
            android:textAppearance="@style/TextAppearance.FindU.Head1_SB_24"
            android:textColor="@color/gray6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_login_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_login_logo">

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_login_email"
            android:drawablePadding="10dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp"
            android:textAppearance="@style/TextAppearance.FindU.Body2_SB_14"
            android:textColorHint="@color/gray4"
            app:layout_constraintBottom_toTopOf="@id/et_login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_login_password"
            android:drawablePadding="10dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp"
            android:textAppearance="@style/TextAppearance.FindU.Body2_SB_14"
            android:textColorHint="@color/gray4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_login_email" />

        <ImageView
            android:id="@+id/iv_login_password_visible"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_password_off"
            app:layout_constraintBottom_toBottomOf="@id/et_login_password"
            app:layout_constraintEnd_toEndOf="@id/et_login_password"
            app:layout_constraintTop_toTopOf="@id/et_login_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_home_rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_login_email_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/login_button"
            android:textAppearance="@style/TextAppearance.FindU.Head3_SB_18"
            android:textColor="@color/gray6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_signup_find_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_login_button">

        <TextView
            android:id="@+id/tv_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:textAppearance="@style/TextAppearance.FindU.Body2_SB_14"
            android:textColor="@color/main_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_find_password"
            android:textAppearance="@style/TextAppearance.FindU.Body2_SB_14"
            android:textColor="@color/gray4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_login_signup_find_password">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            app:dividerColor="@color/gray4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_login_social"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_social"
            android:textAppearance="@style/TextAppearance.FindU.Body2_SB_14"
            android:textColor="@color/gray4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            app:dividerColor="@color/gray4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_login_social"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_login_kakao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@drawable/img_kakao_login"
        app:layout_constraintDimensionRatio="320:48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_login_social" />


</androidx.constraintlayout.widget.ConstraintLayout>